--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-project",
   "private": true,
-  "homepage":"https://TanishqGaur20.github.io/Venue-Location",
+  "homepage":"https://TanishqGaur20.github.io/Venue-Location/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-"deploy": "gh-pages -d build"
+"deploy": "gh-pages -d dist"
 
   },
   "dependencies": {
